--- a/Ages of Conflict.html
+++ b/Ages of Conflict.html
@@ -909,71 +909,66 @@ footer a:hover {
   <div class="recommendations">
     <h2>You Might Also Like</h2>
     <div class="grid">
-      <a href="Blackjack.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Blackjack/thumbnail.png')">
-        <img class="thumb" src="games/Blackjack/thumbnail.png" alt="Blackjack" loading="lazy">
+      <a href="Age Of War.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Age Of War/thumbnail.png')">
+        <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War" loading="lazy">
       </div>
-      <div class="card-title">Blackjack</div>
+      <div class="card-title">Age Of War</div>
     </a><a href="Bitlife.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Bitlife/thumbnail.jpg')">
         <img class="thumb" src="games/Bitlife/thumbnail.jpg" alt="Bitlife" loading="lazy">
       </div>
       <div class="card-title">Bitlife</div>
-    </a><a href="Age Of War.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Age Of War/thumbnail.png')">
-        <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War" loading="lazy">
+    </a><a href="Blackjack.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Blackjack/thumbnail.png')">
+        <img class="thumb" src="games/Blackjack/thumbnail.png" alt="Blackjack" loading="lazy">
       </div>
-      <div class="card-title">Age Of War</div>
-    </a><a href="Capybara Clicker.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Capybara Clicker/thumbnail.png')">
-        <img class="thumb" src="games/Capybara Clicker/thumbnail.png" alt="Capybara Clicker" loading="lazy">
+      <div class="card-title">Blackjack</div>
+    </a><a href="Escape Road .html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Escape Road /thumbnail.png')">
+        <img class="thumb" src="games/Escape Road /thumbnail.png" alt="Escape Road " loading="lazy">
       </div>
-      <div class="card-title">Capybara Clicker</div>
-    </a><a href="Bad Parenting.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Parenting/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting" loading="lazy">
-      </div>
-      <div class="card-title">Bad Parenting</div>
-    </a><a href="Infinite Craft.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Infinite Craft/thumbnail.png')">
-        <img class="thumb" src="games/Infinite Craft/thumbnail.png" alt="Infinite Craft" loading="lazy">
-      </div>
-      <div class="card-title">Infinite Craft</div>
-    </a><a href="Bob The Robber .html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber /thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber /thumbnail.jpg" alt="Bob The Robber " loading="lazy">
-      </div>
-      <div class="card-title">Bob The Robber </div>
-    </a><a href="Dreader.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Dreader/thumbnail.png')">
-        <img class="thumb" src="games/Dreader/thumbnail.png" alt="Dreader" loading="lazy">
-      </div>
-      <div class="card-title">Dreader</div>
-    </a><a href="Cut the Rope.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Cut the Rope/thumbnail.png')">
-        <img class="thumb" src="games/Cut the Rope/thumbnail.png" alt="Cut the Rope" loading="lazy">
-      </div>
-      <div class="card-title">Cut the Rope</div>
-    </a><a href="10 Minutes Till Dawn.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/10 Minutes Till Dawn/thumbnail.png')">
-        <img class="thumb" src="games/10 Minutes Till Dawn/thumbnail.png" alt="10 Minutes Till Dawn" loading="lazy">
-      </div>
-      <div class="card-title">10 Minutes Till Dawn</div>
+      <div class="card-title">Escape Road </div>
     </a><a href="Bloodmoney 2.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney 2/thumbnail.jpg')">
         <img class="thumb" src="games/Bloodmoney 2/thumbnail.jpg" alt="Bloodmoney 2" loading="lazy">
       </div>
       <div class="card-title">Bloodmoney 2</div>
-    </a><a href="Clear Vision 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Clear Vision 2/thumbnail.jpg" alt="Clear Vision 2" loading="lazy">
+    </a><a href="10 Minutes Till Dawn.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/10 Minutes Till Dawn/thumbnail.png')">
+        <img class="thumb" src="games/10 Minutes Till Dawn/thumbnail.png" alt="10 Minutes Till Dawn" loading="lazy">
       </div>
-      <div class="card-title">Clear Vision 2</div>
-    </a><a href="Crazy Cattle 3D.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crazy Cattle 3D/thumbnail.png')">
-        <img class="thumb" src="games/Crazy Cattle 3D/thumbnail.png" alt="Crazy Cattle 3D" loading="lazy">
+      <div class="card-title">10 Minutes Till Dawn</div>
+    </a><a href="Bounty of One.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bounty of One/thumbnail.png')">
+        <img class="thumb" src="games/Bounty of One/thumbnail.png" alt="Bounty of One" loading="lazy">
       </div>
-      <div class="card-title">Crazy Cattle 3D</div>
+      <div class="card-title">Bounty of One</div>
+    </a><a href="Dreader.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dreader/thumbnail.png')">
+        <img class="thumb" src="games/Dreader/thumbnail.png" alt="Dreader" loading="lazy">
+      </div>
+      <div class="card-title">Dreader</div>
+    </a><a href="Bit Planes.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bit Planes/thumbnail.jpg')">
+        <img class="thumb" src="games/Bit Planes/thumbnail.jpg" alt="Bit Planes" loading="lazy">
+      </div>
+      <div class="card-title">Bit Planes</div>
+    </a><a href="Bloxorz.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bloxorz/thumbnail.png')">
+        <img class="thumb" src="games/Bloxorz/thumbnail.png" alt="Bloxorz" loading="lazy">
+      </div>
+      <div class="card-title">Bloxorz</div>
+    </a><a href="Dead Zed 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dead Zed 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Dead Zed 2/thumbnail.jpg" alt="Dead Zed 2" loading="lazy">
+      </div>
+      <div class="card-title">Dead Zed 2</div>
+    </a><a href="Crazy Cars.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Crazy Cars/thumbnail.jpg')">
+        <img class="thumb" src="games/Crazy Cars/thumbnail.jpg" alt="Crazy Cars" loading="lazy">
+      </div>
+      <div class="card-title">Crazy Cars</div>
     </a><a href="Deadly Descent.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Deadly Descent/thumbnail.png')">
         <img class="thumb" src="games/Deadly Descent/thumbnail.png" alt="Deadly Descent" loading="lazy">
@@ -984,106 +979,111 @@ footer a:hover {
         <img class="thumb" src="games/Clear Vision 1/thumbnail.jpg" alt="Clear Vision 1" loading="lazy">
       </div>
       <div class="card-title">Clear Vision 1</div>
-    </a><a href="Bouncemasters.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bouncemasters/thumbnail.jpg')">
-        <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters" loading="lazy">
+    </a><a href="Basketball FRVR.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Basketball FRVR/thumbnail.jpg')">
+        <img class="thumb" src="games/Basketball FRVR/thumbnail.jpg" alt="Basketball FRVR" loading="lazy">
       </div>
-      <div class="card-title">Bouncemasters</div>
-    </a><a href="Dead Zed 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Dead Zed 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Dead Zed 2/thumbnail.jpg" alt="Dead Zed 2" loading="lazy">
-      </div>
-      <div class="card-title">Dead Zed 2</div>
-    </a><a href="1v1.lol.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/1v1.lol/thumbnail.png')">
-        <img class="thumb" src="games/1v1.lol/thumbnail.png" alt="1v1.lol" loading="lazy">
-      </div>
-      <div class="card-title">1v1.lol</div>
+      <div class="card-title">Basketball FRVR</div>
     </a><a href="Bob The Robber 5.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 5/thumbnail.jpg')">
         <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5" loading="lazy">
       </div>
       <div class="card-title">Bob The Robber 5</div>
-    </a><a href="BTD5.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/BTD5/thumbnail.jpg')">
-        <img class="thumb" src="games/BTD5/thumbnail.jpg" alt="BTD5" loading="lazy">
+    </a><a href="Cluster Rush.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Cluster Rush/thumbnail.png')">
+        <img class="thumb" src="games/Cluster Rush/thumbnail.png" alt="Cluster Rush" loading="lazy">
       </div>
-      <div class="card-title">BTD5</div>
-    </a><a href="Bad Piggies.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Piggies/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Bad Piggies" loading="lazy">
+      <div class="card-title">Cluster Rush</div>
+    </a><a href="Blaze Drifter.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Blaze Drifter/thumbnail.jpg')">
+        <img class="thumb" src="games/Blaze Drifter/thumbnail.jpg" alt="Blaze Drifter" loading="lazy">
       </div>
-      <div class="card-title">Bad Piggies</div>
-    </a><a href="Bad Time Simulator.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Time Simulator/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Time Simulator/thumbnail.jpg" alt="Bad Time Simulator" loading="lazy">
+      <div class="card-title">Blaze Drifter</div>
+    </a><a href="1v1.lol.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/1v1.lol/thumbnail.png')">
+        <img class="thumb" src="games/1v1.lol/thumbnail.png" alt="1v1.lol" loading="lazy">
       </div>
-      <div class="card-title">Bad Time Simulator</div>
-    </a><a href="CS Go Clicker.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/CS Go Clicker/thumbnail.png')">
-        <img class="thumb" src="games/CS Go Clicker/thumbnail.png" alt="CS Go Clicker" loading="lazy">
+      <div class="card-title">1v1.lol</div>
+    </a><a href="Bob The Robber .html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber /thumbnail.jpg')">
+        <img class="thumb" src="games/Bob The Robber /thumbnail.jpg" alt="Bob The Robber " loading="lazy">
       </div>
-      <div class="card-title">CS Go Clicker</div>
-    </a><a href="Bounty of One.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bounty of One/thumbnail.png')">
-        <img class="thumb" src="games/Bounty of One/thumbnail.png" alt="Bounty of One" loading="lazy">
-      </div>
-      <div class="card-title">Bounty of One</div>
+      <div class="card-title">Bob The Robber </div>
     </a><a href="Baldi’s Basics.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Baldi’s Basics/thumbnail.png')">
         <img class="thumb" src="games/Baldi’s Basics/thumbnail.png" alt="Baldi’s Basics" loading="lazy">
       </div>
       <div class="card-title">Baldi’s Basics</div>
-    </a><a href="Block Blast.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Block Blast/thumbnail.jpg')">
-        <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast" loading="lazy">
+    </a><a href="Drift Boss.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Drift Boss/thumbnail.png')">
+        <img class="thumb" src="games/Drift Boss/thumbnail.png" alt="Drift Boss" loading="lazy">
       </div>
-      <div class="card-title">Block Blast</div>
+      <div class="card-title">Drift Boss</div>
     </a><a href="Bloodmoney .html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
         <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney " loading="lazy">
       </div>
       <div class="card-title">Bloodmoney </div>
-    </a><a href="Bouncy Motors.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bouncy Motors/thumbnail.jpg')">
-        <img class="thumb" src="games/Bouncy Motors/thumbnail.jpg" alt="Bouncy Motors" loading="lazy">
+    </a><a href="Infinite Craft.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Infinite Craft/thumbnail.png')">
+        <img class="thumb" src="games/Infinite Craft/thumbnail.png" alt="Infinite Craft" loading="lazy">
       </div>
-      <div class="card-title">Bouncy Motors</div>
-    </a><a href="Slope.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
-        <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope" loading="lazy">
+      <div class="card-title">Infinite Craft</div>
+    </a><a href="Cookie Clicker.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Cookie Clicker/thumbnail.png')">
+        <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker" loading="lazy">
       </div>
-      <div class="card-title">Slope</div>
-    </a><a href="Bloxorz.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bloxorz/thumbnail.png')">
-        <img class="thumb" src="games/Bloxorz/thumbnail.png" alt="Bloxorz" loading="lazy">
+      <div class="card-title">Cookie Clicker</div>
+    </a><a href="Bouncemasters.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bouncemasters/thumbnail.jpg')">
+        <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters" loading="lazy">
       </div>
-      <div class="card-title">Bloxorz</div>
-    </a><a href="Extreme Run 3D.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Extreme Run 3D/thumbnail.jpg')">
-        <img class="thumb" src="games/Extreme Run 3D/thumbnail.jpg" alt="Extreme Run 3D" loading="lazy">
+      <div class="card-title">Bouncemasters</div>
+    </a><a href="Clear Vision 3.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 3/thumbnail.png')">
+        <img class="thumb" src="games/Clear Vision 3/thumbnail.png" alt="Clear Vision 3" loading="lazy">
       </div>
-      <div class="card-title">Extreme Run 3D</div>
-    </a><a href="Clear Vision 5.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 5/thumbnail.png')">
-        <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5" loading="lazy">
+      <div class="card-title">Clear Vision 3</div>
+    </a><a href="Douchebag Life.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Douchebag Life/thumbnail.jpg')">
+        <img class="thumb" src="games/Douchebag Life/thumbnail.jpg" alt="Douchebag Life" loading="lazy">
       </div>
-      <div class="card-title">Clear Vision 5</div>
-    </a><a href="Deltarune.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Deltarune/thumbnail.jpg')">
-        <img class="thumb" src="games/Deltarune/thumbnail.jpg" alt="Deltarune" loading="lazy">
+      <div class="card-title">Douchebag Life</div>
+    </a><a href="Crazy Motorcycle.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Crazy Motorcycle/thumbnail.jpg')">
+        <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle" loading="lazy">
       </div>
-      <div class="card-title">Deltarune</div>
-    </a><a href="Crossy Road.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crossy Road/thumbnail.jpg')">
-        <img class="thumb" src="games/Crossy Road/thumbnail.jpg" alt="Crossy Road" loading="lazy">
+      <div class="card-title">Crazy Motorcycle</div>
+    </a><a href="Gold Digger FRVR.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Gold Digger FRVR/thumbnail.png')">
+        <img class="thumb" src="games/Gold Digger FRVR/thumbnail.png" alt="Gold Digger FRVR" loading="lazy">
       </div>
-      <div class="card-title">Crossy Road</div>
-    </a><a href="Bob The Robber 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2" loading="lazy">
+      <div class="card-title">Gold Digger FRVR</div>
+    </a><a href="BTD5.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/BTD5/thumbnail.jpg')">
+        <img class="thumb" src="games/BTD5/thumbnail.jpg" alt="BTD5" loading="lazy">
       </div>
-      <div class="card-title">Bob The Robber 2</div>
+      <div class="card-title">BTD5</div>
+    </a><a href="CS Go Clicker.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/CS Go Clicker/thumbnail.png')">
+        <img class="thumb" src="games/CS Go Clicker/thumbnail.png" alt="CS Go Clicker" loading="lazy">
+      </div>
+      <div class="card-title">CS Go Clicker</div>
+    </a><a href="Hanger 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Hanger 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Hanger 2/thumbnail.jpg" alt="Hanger 2" loading="lazy">
+      </div>
+      <div class="card-title">Hanger 2</div>
+    </a><a href="Clear Vision 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Clear Vision 2/thumbnail.jpg" alt="Clear Vision 2" loading="lazy">
+      </div>
+      <div class="card-title">Clear Vision 2</div>
+    </a><a href="Clear Vision 4.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 4/thumbnail.jpg')">
+        <img class="thumb" src="games/Clear Vision 4/thumbnail.jpg" alt="Clear Vision 4" loading="lazy">
+      </div>
+      <div class="card-title">Clear Vision 4</div>
     </a>
     </div>
   </div>
